# doc2html

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
samples/: make_samples.py  sample.csv  sample.html  sample.json  sample.txt
src/doc2html/: __init__.py  __main__.py  _base_converter.py  _doc2html.py  _exceptions.py  _html_builder.py  _stream_info.py  gdrive.py  html.py  ocr.py
src/doc2html/converters/: __init__.py  csv_converter.py  docx_converter.py  html_converter.py  json_converter.py  pdf_converter.py  plain_text.py  pptx_converter.py  xlsx_converter.py
tests/: conftest.py  test_cli.py  test_converters.py  test_dispatch.py  test_html_builder.py  test_ocr.py
