[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc2html"
version = "0.5.0"
description = "把多種文件格式（PDF/Word/Excel/PPT/HTML/CSV/JSON/純文字）轉成 HTML，靈感來自 microsoft/markitdown。"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ryanwang" }]
keywords = ["html", "converter", "pdf", "docx", "xlsx", "pptx", "markitdown"]

# 核心不強制任何重依賴；各格式依賴放在 optional-dependencies。
dependencies = []

[project.optional-dependencies]
# pdfplumber 內含 pdfminer.six，並額外提供表格抽取能力
pdf = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1.0"]
xlsx = ["openpyxl>=3.1.0"]
pptx = ["python-pptx>=0.6.23"]
html = ["beautifulsoup4>=4.12.0"]
all = [
    "pdfplumber>=0.11",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "python-pptx>=0.6.23",
    "beautifulsoup4>=4.12.0",
]
# OCR：把掃描頁 rasterize 成圖片（backend 無關），再交給某個 OcrBackend。
ocr = ["pypdfium2>=4", "pillow>=10"]
# 用 Gemini 當 OCR 後端（雲端）；需設定 GEMINI_API_KEY。
ocr-gemini = ["doc2html[ocr]", "google-genai>=1.0"]
dev = [
    "doc2html[all]",
    "doc2html[ocr]",  # rasterize，讓 OCR 後備測試（用 fake backend）能在 CI 跑
    "pytest>=8.0",
    "reportlab>=4.0",  # 產生測試用 PDF
    "ruff>=0.6",
]

[project.scripts]
doc2html = "doc2html.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc2html"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "tests",
    "samples/make_samples.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
